# xo_app

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ToDoList.txt  build_debug.sh  build_release.sh  clang_format.sh  run_tests_debug.sh  run_tests_release.sh  setup.py
.github/workflows/: cmake.yml
drivers/: CMakeLists.txt  cli_driver.cpp
python/: python_wrapper.cpp
src/: CMakeLists.txt  bitboardhelpers.cpp  bitboardhelpers.h  board_4_4_4.cpp  board_4_4_4.h  board_types.h  common_types.h  game3d_4_4_4.cpp  game3d_4_4_4.h  game_types.h  gameapplication.cpp  gameapplication.h  gamemanager.cpp  gamemanager.h  magic.cpp  magic.h  winchecker.cpp  winchecker.h
src/bitboards/: bitboardhelpers.cpp  bitboardhelpers.h  winchecker.cpp  winchecker.h
src/board/: board.cpp  board.h  i_board.h
src/common/: board_types.h  common_types.h
src/game/: game3d_4_4_4.cpp  game3d_4_4_4.h  game_types.h
src/magic/: magic.cpp  magic.h
tests/: CMakeLists.txt  test_bitboardhelpers.cpp  test_board.cpp  test_board_4_4_4.cpp  test_magic.cpp
